sentencepiece (0.0.1)

	* Initial version

-- Pablo Duboue, 2024/02/12