@@ -1,3 +1,10 @@
+sentencepiece (0.0.2)
+
+	* Simplified naming
+	* Bugfixing
+
+-- Pablo Duboue, 2024/02/12
+
 sentencepiece (0.0.1)
 
 	* Initial version
